[package]
name = "prover-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["ws"] }
eyre = "0.6.8"
futures = "0.3.28"
hex = "0.4.3"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "node"
path = "bin/node.rs"
